# agent

./: .env.example  .gitignore  README.md  pyproject.toml
solution/: 02_vanilla_agent.ipynb  03_mcp_server.ipynb  04_agent_patterns.ipynb
src/: 01_overview.ipynb  02_vanilla_agent.ipynb  03_mcp_server.ipynb  04_agent_patterns.ipynb  05_dspy_mcp_client.ipynb
src/06_langgraph_mcp_client/: diagram.mmd  langgraph_react_agent.py
